1.06
==================
templates: bug in double quoted string parsing fixed  "hello" not recognized :(
templates: != operator implemented for {% if %}

1.05
==================
Freql: Support for null fields in tables, mapped onto option fields in records
templates: changed extends -> include in jinja2 clone to correctly reflect jinja semantics
templates: implemented jinna2 blocks
ji
templates: implemented jinja2 extend
templates: fixed empty for/if blocks

Added unit tests for pg_db.fs
Added unit tests for template extends and blocks cases

1.02
==================
Bug fix for premature dbconnection returning to pool

1.01
=================
Added logging for queries (optionally conditional on runtime)
Added logging for connection pool usage
Killed bug due to premature release of db connection
Added support for ignoredColumns argument to InsertMany for db supplied column values

1.0
=================
Added external transaction support to FreQL InsertMany
Added error message for table not found on FreqInsert
Added typed URL dispatch functions to catch errors at edit time
   Instead of box myFunc   , use  D0 myFunc  (or D1 myFunc if it takes 1 param etc, D2.. D7 are defined)

0.9
=================
Added FreQL - F# Record / SQL support under Fss.Data.Postgres

0.8
=================
Fixed bug with returning unicode text strings that was causing a discrepancy in content length and actual # of bytes.
Added /index.html page to ease access to example cases.

0.71
=================
Added mutex around thread tracking to prevent concurrent thread addition during iteration for shutdown

0.70
=================
Cleaned up some critical network/streamwriter buffer flushing bugs that could 
under some circumstances create issues

0.64
=================
Added Stop() method to shut down server

0.61,62,63
=================
Recursive application of variable expansion for included header files
Fixes to form argument parsing


0.6
=================