@@ -37,6 +37,6 @@ open System.Runtime.InteropServices
 // [assembly: AssemblyVersion("1.0.*")]
 
 // see also fss.fs version string
-[<assembly: AssemblyVersion("1.0.5.0")>]
-[<assembly: AssemblyFileVersion("1.0.5.0")>]
+[<assembly: AssemblyVersion("1.0.6.0")>]
+[<assembly: AssemblyFileVersion("1.0.6.0")>]
 ()
